Fixed navbar spacing

--- a/src/styles/components/nav.styl
+++ b/src/styles/components/nav.styl
@@ -19,6 +19,9 @@
     margin 0
     padding 0
 
+    #navfirst
+      margin-right 30vw
+
     &Link
       color white
       font-size 1.1rem
